파라미터 값 받기

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="utf-8">
     <title>지도 생성하기</title>
+    <script>
+        var lat = getParameterByName('lat');
+        var lon = getParameterByName('lon');
+        document.write(lat + ', ' + lon );
+    </script>
     
 </head>
 <body>
