--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="utf-8">
     <title>지도 생성하기</title>
     <script>
-        var lat = getParameterByName('lat');
-        var lon = getParameterByName('lon');
-        document.write(lat + ', ' + lon );
+        function getParameterByName(name) {
+            name = name.replace(/[\[]/, "\\[").replace(/[\]]/, "\\]");
+            var regex = new RegExp("[\\?&]" + name + "=([^&#]*)"),
+                    results = regex.exec(location.search);
+            return results == null ? "" : decodeURIComponent(results[1].replace(/\+/g, " "));
+        }
+
     </script>
     
 </head>
@@ -16,6 +20,10 @@
 
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=bb3058b5de4a712fc2234784a0bc4075"></script>
 <script>
+        var lat = getParameterByName('lat');
+        var lon = getParameterByName('lon');
+        document.write(lat + ', ' + lon );
+
 var mapContainer = document.getElementById('kakao'), // 지도를 표시할 div 
     mapOption = { 
         center: new kakao.maps.LatLng(lat, lon), // 지도의 중심좌표
