--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
         var lon = getParameterByName('lon');
         document.write(lat + ', ' + lon );
 
+        // document.getElementById("data").innerHTML=ball;
+
 var mapContainer = document.getElementById('kakao'), // 지도를 표시할 div 
     mapOption = { 
-        center: new kakao.maps.LatLng(lat, lon), // 지도의 중심좌표
+        center: new kakao.maps.LatLng(getParameterByName('lat').innerHTML, getParameterByName('lon').innerHTML), // 지도의 중심좌표
         level: 3 // 지도의 확대 레벨
     };
 
