--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         var lon = getParameterByName('lon');
         document.write(lat + ', ' + lon );
 
-        // document.getElementById("data").innerHTML=ball;
+         document.getParameterByName("lat").innerHTML = lat + " " + lon; 
+        //  document.getElementById("data").innerHTML=ball;
 
 var mapContainer = document.getElementById('kakao'), // 지도를 표시할 div 
     mapOption = { 
