--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             }
         }
 
-        request.getParameter('lon');
+        
 
     </script>
     
@@ -40,14 +40,14 @@
 <script>
         var lat = getParameterByName('lat');
         var lon = getParameterByName('lon');
-        document.write(lat + ', ' + lon );
+        document.write(lat + ' - ' + lon );
 
         //  document.getParameterByName("lat").innerHTML = lat + " " + lon; 
         //  document.getElementById("data").innerHTML=ball;
 
 var mapContainer = document.getElementById('kakao'), // 지도를 표시할 div 
     mapOption = { 
-        center: new kakao.maps.LatLng(37.2706797, 127.0135444), // 지도의 중심좌표
+        center: new kakao.maps.LatLng(request.getParameter('lon'), request.getParameter('lat')), // 지도의 중심좌표
         level: 3 // 지도의 확대 레벨
     };
 
