--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 var mapContainer = document.getElementById('kakao'), // 지도를 표시할 div 
     mapOption = { 
-        center: new kakao.maps.LatLng(document.write(lon), document.write(lat)), // 지도의 중심좌표
+        center: new kakao.maps.LatLng(lat.toString, lon.toString), // 지도의 중심좌표
         level: 3 // 지도의 확대 레벨
     };
 
