--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
             name = name.replace(/[\[]/, "\\[").replace(/[\]]/, "\\]");
             var regex = new RegExp("[\\?&]" + name + "=([^&#]*)"),
                     results = regex.exec(location.search);
-            return results == null ? "" : decodeURIComponent(results[1].replace(/\+/g, " "));
+            results == null ? "" : decodeURIComponent(results[1].replace(/\+/g, " "));
+            document.write(results);
         }
 
         var Request=function(){
@@ -47,7 +48,7 @@
 
 var mapContainer = document.getElementById('kakao'), // 지도를 표시할 div 
     mapOption = { 
-        center: new kakao.maps.LatLng(lat.toString, lon.toString), // 지도의 중심좌표
+        center: new kakao.maps.LatLng(getParameterByName('lat'), getParameterByName('lon')), // 지도의 중심좌표
         level: 3 // 지도의 확대 레벨
     };
 
