--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         var lon = getParameterByName('lon');
         document.write(lat + ' - ' + lon );
 
-var mapContainer = document.getElementById('kakao'), // 지도를 표시할 div 
+    var mapContainer = document.getElementById('kakao'), // 지도를 표시할 div 
     mapOption = { 
-        center: new kakao.maps.LatLng(document.innerHTML = lat, document.innerHTML = lon), // 지도의 중심좌표
+        center: new kakao.maps.LatLng(lat, lon), // 지도의 중심좌표
         level: 3 // 지도의 확대 레벨
     };
 
