--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=bb3058b5de4a712fc2234784a0bc4075"></script>
 <script>
-        var lat = getParameterByName('lat');
-        var lon = getParameterByName('lon');
+        let lat = getParameterByName('lat');
+        let lon = getParameterByName('lon');
         document.write(lat + ' - ' + lon );
 
     var mapContainer = document.getElementById('kakao'), // 지도를 표시할 div 
