--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
 <script>
         let lat = getParameterByName('lat');
         let lng = getParameterByName('lng');
-        document.write(lat + ' - ' + lon );
+        document.write(lat + ' - ' + lng );
 
-    var mapContainer = document.getElementById('kakao'), // 지도를 표시할 div 
-    mapOption = { 
-        center: new kakao.maps.LatLng(lat, lng), // 지도의 중심좌표
-        level: 3 // 지도의 확대 레벨
-    };
+        var mapContainer = document.getElementById('kakao'), // 지도를 표시할 div 
+        mapOption = { 
+            center: new kakao.maps.LatLng(lat, lng), // 지도의 중심좌표
+            level: 3 // 지도의 확대 레벨
+        };
 
-// 지도를 표시할 div와  지도 옵션으로  지도를 생성합니다
-var map = new kakao.maps.Map(mapContainer, mapOption); 
+        // 지도를 표시할 div와  지도 옵션으로  지도를 생성합니다
+        var map = new kakao.maps.Map(mapContainer, mapOption); 
 </script>
 </body>
 </html>
