--- a/index.html
+++ b/index.html
@@ -10,25 +10,6 @@
                     results = regex.exec(location.search);
             return results == null ? "" : decodeURIComponent(results[1].replace(/\+/g, " "));
         }
-
-        var Request=function(){
-            this.getParameter=function(name){
-            var trnval = '';
-            var nowAddress=unescape(location.href);
-            var parameters=(nowAddress.slice(nowAddress.indexOf('?')+1, nowAddress.length)).split('&');
-            for(var i = 0; i<parameters.length; i++){
-                var varName=parameters[i].split('=')[0];
-                if(varName.toUpperCase() == name.toUpperCase()){
-                    rtnval=parameters[i].split('=')[1];
-                    break;
-                }
-            }
-            document.write(rtnval);
-            }
-        }
-
-        
-
     </script>
     
 </head>
@@ -40,7 +21,6 @@
 <script>
         let lat = getParameterByName('lat');
         let lng = getParameterByName('lng');
-        document.write(lat + ' - ' + lng );
 
         var mapContainer = document.getElementById('kakao'), // 지도를 표시할 div 
         mapOption = { 
@@ -50,6 +30,17 @@
 
         // 지도를 표시할 div와  지도 옵션으로  지도를 생성합니다
         var map = new kakao.maps.Map(mapContainer, mapOption); 
+
+        // 마커가 표시될 위치입니다 
+        var markerPosition  = new kakao.maps.LatLng(lat, lng); 
+
+        // 마커를 생성합니다
+        var marker = new kakao.maps.Marker({
+            position: markerPosition
+        });
+
+        // 마커가 지도 위에 표시되도록 설정합니다
+        marker.setMap(map);
 </script>
 </body>
 </html>
